Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/Brand_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Exclusivity__c</fullName>
    <label>Brand Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Power Brand</fullName>
            </value>
            <value>
                <fullName>Premium Brand</fullName>
            </value>
            <value>
                <fullName>Luxury Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>