Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/Competitor_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Exclusivity</label>
    <type>Checkbox</type>
</CustomField>