Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/Competitor_Product_Listing__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Listing__c</fullName>
    <label>Competitor Product Listing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>