Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/Competitor_Products_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Products_Exclusivity__c</fullName>
    <label>Competitor Products Exclusivity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>