Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/Product_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Product_Exclusivity__c</fullName>
    <label>Product Exclusivity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>