Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_AmountCommited__c.field-meta.xml
<CustomField>
    <fullName>UB_AmountCommited__c</fullName>
    <label>Amount Commited by Outlet for Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>