Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_AmountGiven__c.field-meta.xml
<CustomField>
    <fullName>UB_AmountGiven__c</fullName>
    <label>Amount Given Free</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>