Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_AmountSponsoredOutlet__c.field-meta.xml
<CustomField>
    <fullName>UB_AmountSponsoredOutlet__c</fullName>
    <label>Amount to be sponsored by UB for Outlet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>