Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_BudgetedAmount__c.field-meta.xml
<CustomField>
    <fullName>UB_BudgetedAmount__c</fullName>
    <label>Budgeted Amount for Promo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>