Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_EventsDoneUB__c.field-meta.xml
<CustomField>
    <fullName>UB_EventsDoneUB__c</fullName>
    <label>Events Done by UB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>