Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoBillBoards__c.field-meta.xml
<CustomField>
    <fullName>UB_NoBillBoards__c</fullName>
    <label>No of Bill Boards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>