Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoEventMonth__c.field-meta.xml
<CustomField>
    <fullName>UB_NoEventMonth__c</fullName>
    <label>No of Event per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>