Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoEventQuarter__c.field-meta.xml
<CustomField>
    <fullName>UB_NoEventQuarter__c</fullName>
    <label>No of Event per Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>