Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoEventsYear__c.field-meta.xml
<CustomField>
    <fullName>UB_NoEventsYear__c</fullName>
    <label>No of Events in Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>