Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoFMRadio__c.field-meta.xml
<CustomField>
    <fullName>UB_NoFMRadio__c</fullName>
    <label>No of FM Radio Ad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>