Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoOtherPromoMaterials__c.field-meta.xml
<CustomField>
    <fullName>UB_NoOtherPromoMaterials__c</fullName>
    <label>No of Other Promo Materials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>