Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_NoPrintMedia__c.field-meta.xml
<CustomField>
    <fullName>UB_NoPrintMedia__c</fullName>
    <label>No of Print Media Ad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>