Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_TotalBudget__c.field-meta.xml
<CustomField>
    <fullName>UB_TotalBudget__c</fullName>
    <label>Total Budget for Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>