Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/fields/UB_VolSold__c.field-meta.xml
<CustomField>
    <fullName>UB_VolSold__c</fullName>
    <label>Vol to be Sold by Outlet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>