Reetan.Nayak Dev 25/force-app/main/default/objects/Contract/recordTypes/UB_Contract.recordType-meta.xml
<RecordType>
    <fullName>UB_Contract</fullName>
    <active>true</active>
    <label>UB Contract</label>
</RecordType>